@@ -1,5 +1,10 @@
 2006-08-09  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c: Include nih/macros.h and nih/list.h
+	* init/process.c: Include order fixing, include nih/macros.h
+	* init/tests/test_job.c: Include nih/macros.h and nih/list.h
+	* init/tests/test_process.c: Include nih/list.h
+
 	* init/job.c: Include order fixing.
 	(job_find_by_name): Function to find a job by its (unique) name.
 	(job_find_by_pid): Function to find a job by the pid of its process.
